--- a/Curso_Python_32h_Aula05.ipynb
+++ b/Curso_Python_32h_Aula05.ipynb
@@ -6,7 +6,7 @@
       "name": "Curso_Python_32h_Aula05.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyN2n5vFBL37f2pq5ciwCEDX",
+      "authorship_tag": "ABX9TyPWRXz1lgnInnzo/gRyXL0U",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -95,7 +95,7 @@
         "\"\"\"\n",
         "vetB = []\n",
         "for i in range(5):\n",
-        "  texto = \"Digite o número \" + str(i+1) + \" :\"\n",
+        "  texto = \"Digite o número \" + str(i+1) + \": \"\n",
         "  vetB.append(int(input(texto)))\n",
         "print(vetB)"
       ],
@@ -523,12 +523,18 @@
         "      print(\"Comando inválido.\")\n",
         "      comando_invalido = True\n",
         "    if comando_invalido == False:\n",
+        "      numero_encontrados = 0\n",
         "      termo = input(\"Digite o termo de busca:\")\n",
         "      for pessoa in lista_pessoas:\n",
         "        if termo == pessoa[atributo]:\n",
+        "          numero_encontrados += 1\n",
         "          for chave in pessoa:\n",
         "            print(chave, \":\", pessoa[chave])\n",
         "          print(\"-------------------\")\n",
+        "      if numero_encontrados == 0:\n",
+        "        print(\"Não foram encontrados registros.\")\n",
+        "      else:\n",
+        "        print(\"Registros encontrados: \", numero_encontrados)\n",
         "  else:\n",
         "    print(\"Até logo!\")"
       ],
@@ -537,9 +543,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wcPWZ0su8Ot5",
-        "outputId": "629a913e-ce5a-4822-a3a3-e559688f0104"
+        "outputId": "3c5af1b1-0022-49b4-98c5-1db1ca032b77"
       },
-      "execution_count": 27,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -552,31 +558,24 @@
             "        4 - Endereço\n",
             "        9 - Sair\n",
             "\n",
-            "Digite o comando:6\n",
-            "Comando inválido.\n",
-            "Selecione o atributo de busca\n",
-            "        1 - Nome\n",
-            "        2 - Cpf\n",
-            "        3 - Telefone\n",
-            "        4 - Endereço\n",
-            "        9 - Sair\n",
-            "\n",
-            "Digite o comando:7\n",
-            "Comando inválido.\n",
-            "Selecione o atributo de busca\n",
-            "        1 - Nome\n",
-            "        2 - Cpf\n",
-            "        3 - Telefone\n",
-            "        4 - Endereço\n",
-            "        9 - Sair\n",
-            "\n",
-            "Digite o comando:3\n",
-            "Digite o termo de busca:(43)99999-9999\n",
+            "Digite o comando:1\n",
+            "Digite o termo de busca:Fernando\n",
             "nome : Fernando\n",
             "cpf : 12345678910\n",
             "telefone : (43)99999-9999\n",
             "endereco : Rua Laranjeiras 100\n",
             "-------------------\n",
+            "Registros encontrados:  1\n",
+            "Selecione o atributo de busca\n",
+            "        1 - Nome\n",
+            "        2 - Cpf\n",
+            "        3 - Telefone\n",
+            "        4 - Endereço\n",
+            "        9 - Sair\n",
+            "\n",
+            "Digite o comando:1\n",
+            "Digite o termo de busca:Alex\n",
+            "Não foram encontrados registros.\n",
             "Selecione o atributo de busca\n",
             "        1 - Nome\n",
             "        2 - Cpf\n",
@@ -593,10 +592,258 @@
     {
       "cell_type": "code",
       "source": [
-        ""
+        "\"\"\"Crie uma lista de string vetI e atribua a cada um de seus\n",
+        "elementos um nome com dados vindos do teclado.\"\"\"\n",
+        "vetI = []\n",
+        "vetI.append(\"Maria\")\n",
+        "vetI.append(\"João\")\n",
+        "vetI.append(\"Marcelo\")\n",
+        "vetI.append(\"Henrique\")\n",
+        "vetI.append(\"Maria\")\n",
+        "\n",
+        "sBusca = input(\"Digite o nome para a busca:\")\n",
+        "for i in range( len(vetI) ):\n",
+        "  if sBusca == vetI[i]:\n",
+        "    print(i)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GGk0VTNXCzoy",
+        "outputId": "1330096d-5fec-4d21-bb46-b002a2aa0360"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite o nome para a busca:Marcelo\n",
+            "2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Aula 05 - Funções\n"
+      ],
+      "metadata": {
+        "id": "29URo3ViD5HD"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def dizer_oi():\n",
+        "  print(\"oi\")"
       ],
       "metadata": {
         "id": "8DWeaCDf9gpS"
+      },
+      "execution_count": 32,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dizer_oi()\n",
+        "dizer_oi()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ceq9Xo9DE3oy",
+        "outputId": "1b149c40-0710-476b-f685-5aeaab95e800"
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "oi\n",
+            "oi\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def escrever_numeros_pares():\n",
+        "  for i in range(10):\n",
+        "    if i % 2 == 0:\n",
+        "      print(i)\n",
+        "\n",
+        "escrever_numeros_pares()\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xZ6LXwESE8TA",
+        "outputId": "e62472a2-310e-47d5-f921-47ac858d10cc"
+      },
+      "execution_count": 37,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "0\n",
+            "2\n",
+            "4\n",
+            "6\n",
+            "8\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def dizer_bom_dia(nome):\n",
+        "  print(\"Bom dia,\", nome, \"!!!\")\n",
+        "\n",
+        "dizer_bom_dia(\"Elainy\")\n",
+        "dizer_bom_dia(\"David\")\n",
+        "#print(nome) nome não fica na memória"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MQ6l1RHmFfPi",
+        "outputId": "f39c21e9-a8cc-421f-8f41-37eae86612a9"
+      },
+      "execution_count": 41,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Bom dia, Elainy !!!\n",
+            "Bom dia, David !!!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def escrever_numeros_impares(numero):\n",
+        "  for i in range(numero):\n",
+        "    if i % 2 == 1:\n",
+        "      print(i)\n",
+        "\n",
+        "escrever_numeros_impares(16)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5y6GqTznF_RJ",
+        "outputId": "0a0c545d-ae3c-478b-aeda-036dc99a8e6f"
+      },
+      "execution_count": 48,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "3\n",
+            "5\n",
+            "7\n",
+            "9\n",
+            "11\n",
+            "13\n",
+            "15\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def escrever_numeros_impares(numero):\n",
+        "  if type(numero) == int:\n",
+        "    for i in range(numero):\n",
+        "      if i % 2 == 1:\n",
+        "        print(i)\n",
+        "  else:\n",
+        "    print(\"número precisa ser do tipo int\")\n",
+        "\n",
+        "escrever_numeros_impares(16)\n",
+        "escrever_numeros_impares(\"Batata\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ij1fLmpGIF5r",
+        "outputId": "e5476194-ed7b-4be9-bcb3-5ca1a043903c"
+      },
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "3\n",
+            "5\n",
+            "7\n",
+            "9\n",
+            "11\n",
+            "13\n",
+            "15\n",
+            "número precisa ser do tipo int\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def somar(n1 , n2):\n",
+        "  print(n1+n2)\n",
+        "\n",
+        "somar(3,4)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "elNJEPlWGfDt",
+        "outputId": "c1913a5c-f209-43f9-d219-736190226d63"
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "7\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def multiplicar(n1, n2):\n",
+        "  resultado = n1 * n2\n",
+        "  return resultado\n",
+        "\n",
+        "multiplicar"
+      ],
+      "metadata": {
+        "id": "j_UliowXImUT"
       },
       "execution_count": null,
       "outputs": []
