--- a/Curso_Python_32h_Aula05.ipynb
+++ b/Curso_Python_32h_Aula05.ipynb
@@ -6,7 +6,7 @@
       "name": "Curso_Python_32h_Aula05.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPWRXz1lgnInnzo/gRyXL0U",
+      "authorship_tag": "ABX9TyP/t+fs12wuGqgZuCXuQqxG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -839,14 +839,395 @@
         "def multiplicar(n1, n2):\n",
         "  resultado = n1 * n2\n",
         "  return resultado\n",
+        "  #resultado = 0 nunca é executado\n",
         "\n",
-        "multiplicar"
+        "x = multiplicar(3,4)\n",
+        "print(x)\n",
+        "print(multiplicar(2,3))"
       ],
       "metadata": {
-        "id": "j_UliowXImUT"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "j_UliowXImUT",
+        "outputId": "b46cfc32-b40e-4810-9363-5d4ff8eb4bed"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "12\n",
+            "6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def dizer_boa_noite(nome, quantidade = 1):\n",
+        "  for i in range(quantidade):\n",
+        "    print(\"Boa noite,\", nome)\n",
+        "\n",
+        "dizer_boa_noite(\"Vania\", 2)\n",
+        "dizer_boa_noite(\"Ericka\")\n",
+        "dizer_boa_noite(quantidade = 2, nome = \"Diego\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "33qMmeudPU2L",
+        "outputId": "731651c5-bb55-44fa-b582-d31deddcccc9"
+      },
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Boa noite, Vania\n",
+            "Boa noite, Vania\n",
+            "Boa noite, Ericka\n",
+            "Boa noite, Diego\n",
+            "Boa noite, Diego\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def somar_e_multiplicar(n1, n2):\n",
+        "  soma = n1 + n2\n",
+        "  mult = n1 * n2\n",
+        "  return soma, mult\n",
+        "  #return [soma,mult]\n",
+        "\n",
+        "s, m = somar_e_multiplicar(3,4)\n",
+        "#lista = somar_e_multiplicar(3,4)\n",
+        "print(s,m)\n",
+        "#print(lista)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "D61SaLBURA0_",
+        "outputId": "508a2fff-3ec7-4660-a46e-063aa13d4596"
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "7 12\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def e_par(n):\n",
+        "  if n % 2 == 0:\n",
+        "    return True\n",
+        "    #nada mais é executado\n",
+        "  else:\n",
+        "    return False\n",
+        "    #nada mais é executado\n",
+        "\n",
+        "x = e_par(3)\n",
+        "print(x)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "abspjvPPSVDM",
+        "outputId": "15997f8d-2a8b-4858-f668-72b898a2b6e1"
+      },
+      "execution_count": 59,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Desafio 05"
+      ],
+      "metadata": {
+        "id": "IVKXiRA8TrW9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Ler 3 valores e escrever o maior deles.\n",
+        "def maior_de_3_valores(v1,v2,v3):\n",
+        "  maior = v1\n",
+        "  if v2 > maior:\n",
+        "    maior = v2\n",
+        "  if v3 > maior:\n",
+        "    maior = v3\n",
+        "  return maior\n",
+        "\n",
+        "v1 = int(input(\"Digite o primeiro número: \"))\n",
+        "v2 = int(input(\"Digite o segundo número: \"))\n",
+        "v3 = int(input(\"Digite o terceiro número: \"))\n",
+        "\n",
+        "print(\"O maior número é \", maior_de_3_valores(v1,v2,v3))\n",
+        "print(\"O maior número é \", maior_de_3_valores(5,6,8))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YsXoWk54TbBC",
+        "outputId": "c255e6c3-5b7e-49ac-c3a0-eb821d9a1a26"
+      },
+      "execution_count": 61,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite o primeiro número: 2\n",
+            "Digite o segundo número: 3\n",
+            "Digite o terceiro número: 4\n",
+            "O maior número é  4\n",
+            "O maior número é  8\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\"leia do teclado uma distância em metros e mostre na tela o\n",
+        "seu valor convertido em quilômetros.(Valores inválidos:\n",
+        "números negativos).\"\"\"\n",
+        "def metros_para_km():\n",
+        "  metros = float(input(\"Digite o valor em metros:\"))\n",
+        "  km = metros / 1000\n",
+        "  print(km)\n",
+        "\n",
+        "metros_para_km()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9Q9n6tRvVLKz",
+        "outputId": "91069d2f-6580-45f9-8c7a-029365da434f"
+      },
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite o valor em metros:2500\n",
+            "2.5\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def metros_para_km_com_retorno(metros):\n",
+        "  km = metros / 1000\n",
+        "  return km\n",
+        "\n",
+        "m = float(input(\"Digite o valor em metros:\"))\n",
+        "km = metros_para_km_com_retorno(m)\n",
+        "print(km)\n",
+        "print(metros_para_km_com_retorno(3000))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "JdxqYXywWQTf",
+        "outputId": "cd12f32e-df11-446a-9c7f-c61a43193315"
+      },
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Digite o valor em metros:2500\n",
+            "2.5\n",
+            "3.0\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\"\"\"A partir do exercício anterior crie uma busca onde o usuário\n",
+        "possa procurar uma pessoa por nome, cpf, telefone ou endereço.\"\"\"\n",
+        "\n",
+        "def exibir_menu():\n",
+        "  print(\"Selecione o atributo de busca\\n\\\n",
+        "        1 - Nome\\n\\\n",
+        "        2 - Cpf\\n\\\n",
+        "        3 - Telefone\\n\\\n",
+        "        4 - Endereço\\n\\\n",
+        "        9 - Sair\\n\")\n",
+        "  comando = int(input(\"Digite o comando:\"))\n",
+        "  return comando\n",
+        "  \n",
+        "def buscar(lista_pessoas, termo, atributo):\n",
+        "  numero_encontrados = 0\n",
+        "  for pessoa in lista_pessoas:\n",
+        "    if termo == pessoa[atributo]:\n",
+        "      numero_encontrados += 1\n",
+        "      for chave in pessoa:\n",
+        "        print(chave, \":\", pessoa[chave])\n",
+        "      print(\"-------------------\")\n",
+        "  return numero_encontrados\n",
+        "\n",
+        "def mostrar_encontrados(numero_encontrados):\n",
+        "  if numero_encontrados == 0:\n",
+        "    print(\"Não foram encontrados registros.\")\n",
+        "  else:\n",
+        "    print(\"Registros encontrados: \", numero_encontrados)\n",
+        "\n",
+        "def definir_comando(comando):\n",
+        "  comando_invalido = False\n",
+        "  if comando != 9:\n",
+        "    if comando == 1:\n",
+        "      atributo = \"nome\"\n",
+        "    elif comando == 2:\n",
+        "      atributo = \"cpf\"\n",
+        "    elif comando == 3:\n",
+        "      atributo = \"telefone\"\n",
+        "    elif comando == 4:\n",
+        "      atributo = \"endereco\"\n",
+        "    else:\n",
+        "      print(\"Comando inválido.\")\n",
+        "      comando_invalido = True\n",
+        "      return comando_invalido\n",
+        "    if comando_invalido == False:\n",
+        "      return atributo\n",
+        "  return comando\n",
+        "\n",
+        "comando = 0\n",
+        "while comando != 9:\n",
+        "  comando = exibir_menu()\n",
+        "  comando = definir_comando(comando)\n",
+        "  if type(comando) != int:\n",
+        "    if type(comando) != bool:\n",
+        "      atributo = comando\n",
+        "      termo = input(\"Digite o termo de busca:\")\n",
+        "      numero_encontrados = buscar(lista_pessoas, termo, atributo)\n",
+        "      mostrar_encontrados(numero_encontrados)\n",
+        "  else:\n",
+        "    print(\"Até logo!\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "faj_4JkpWsA9",
+        "outputId": "99701bb7-3476-4ac1-a1ba-72f48c60a0e3"
+      },
+      "execution_count": 67,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Selecione o atributo de busca\n",
+            "        1 - Nome\n",
+            "        2 - Cpf\n",
+            "        3 - Telefone\n",
+            "        4 - Endereço\n",
+            "        9 - Sair\n",
+            "\n",
+            "Digite o comando:6\n",
+            "Comando inválido.\n",
+            "Selecione o atributo de busca\n",
+            "        1 - Nome\n",
+            "        2 - Cpf\n",
+            "        3 - Telefone\n",
+            "        4 - Endereço\n",
+            "        9 - Sair\n",
+            "\n",
+            "Digite o comando:1\n",
+            "Digite o termo de busca:Fernando\n",
+            "nome : Fernando\n",
+            "cpf : 12345678910\n",
+            "telefone : (43)99999-9999\n",
+            "endereco : Rua Laranjeiras 100\n",
+            "-------------------\n",
+            "Registros encontrados:  1\n",
+            "Selecione o atributo de busca\n",
+            "        1 - Nome\n",
+            "        2 - Cpf\n",
+            "        3 - Telefone\n",
+            "        4 - Endereço\n",
+            "        9 - Sair\n",
+            "\n",
+            "Digite o comando:2\n",
+            "Digite o termo de busca:12345678912\n",
+            "nome : Ana\n",
+            "cpf : 12345678912\n",
+            "telefone : (43)99999-7777\n",
+            "endereco : Rua Amoreira 300\n",
+            "-------------------\n",
+            "Registros encontrados:  1\n",
+            "Selecione o atributo de busca\n",
+            "        1 - Nome\n",
+            "        2 - Cpf\n",
+            "        3 - Telefone\n",
+            "        4 - Endereço\n",
+            "        9 - Sair\n",
+            "\n",
+            "Digite o comando:3\n",
+            "Digite o termo de busca:23423423\n",
+            "Não foram encontrados registros.\n",
+            "Selecione o atributo de busca\n",
+            "        1 - Nome\n",
+            "        2 - Cpf\n",
+            "        3 - Telefone\n",
+            "        4 - Endereço\n",
+            "        9 - Sair\n",
+            "\n",
+            "Digite o comando:4\n",
+            "Digite o termo de busca:Rua Laranjeiras 100\n",
+            "nome : Fernando\n",
+            "cpf : 12345678910\n",
+            "telefone : (43)99999-9999\n",
+            "endereco : Rua Laranjeiras 100\n",
+            "-------------------\n",
+            "Registros encontrados:  1\n",
+            "Selecione o atributo de busca\n",
+            "        1 - Nome\n",
+            "        2 - Cpf\n",
+            "        3 - Telefone\n",
+            "        4 - Endereço\n",
+            "        9 - Sair\n",
+            "\n",
+            "Digite o comando:9\n",
+            "Até logo!\n"
+          ]
+        }
+      ]
     }
   ]
 }
